2010-05-14 Holger Vogt
 * dllitf.h, cplsetup.c, cmexport.c, int/udnfunc.c, real/udnfunc.c, xspice.c:
   tmalloc patch by R Larice
   vngspice.sln, vngspice.proj: 64 bit support   

2010-05-11 Holger Vogt
 * inpcom.c: new fcn inp_fix_gnd_name: 'gnd' replaced by ' 0 ', if delimiters
   are '(' or ' ' or ',' on the left and ')' or ' ' or ',' on the right.
   fcn inp_bsource_compat: 'm={m}' replaced by '     '   

2010-05-10 Holger Vogt
 * subckt.c:1349: fcn finishLine: add e. and h. to net name
   inside i(...).

2010-05-09 Holger Vogt
 * inpcom.c: patch 09/05/10 by Robert
 * spinit.in: add ngbehavior
 * inpptree.c: derivatives for fcns min and max

2010-05-08 Holger Vogt
 * inpcom.c: patch 02/05/10 by Robert: avoid subtraction from a builtin 1.0
 * inpcom.c: update to E, G sources with expressions
 * inpcom.c, line 3707: put expression for dependent resistor in brackets

2010-04-26 Dietmar Warning
 * parser/inpgval.c: correct parsing of integer model parameter given as double 
   (e.g. capmod=3.000e+00)

2010-04-23 Holger Vogt
 * xpressn.c: agauss is no. 20
   main.c, inp.c, inpcom.c, compatmode.h, inpptree.h, ifeval.c, inpptree.c, ptfuncs.c:
   ngspice compatibility mode with various functions

2010-04-11 Dietmar Warning
 * Robert Larice patch to allow new operations in control blocks:
 * examples/new-check-3.sp, new-check-4.sp
 * src/include/fteparse.h, ngspice.h
 * src/frontend/parse*.*, evaluate.c, Makefile.am, src/misc/string.c, stringutil.h

2010-03-25 Dietmar Warning
 * Bill Swartz patch:
 * numparam/*.c, *.h, *.txt, misc/hash.c, string.c: local and global hash lists for subckts
 * misc/dstring.c, include/dstring.h, Makefile.am: dynamic string feature
 * analysis/cktop.c: remove the CR in some printf's
 
2010-03-20 Holger Vogt
 * variable.c:450 prevent ngspice from crashing after command 'unset zzz', 
   when zzz is not defined

2010-03-20 Holger Vogt
 * com_compose.c: comment corrected
 * subckt.c, cktdefs.h, acan.c, ifeval.c, inp2b.c, inpptree.c, cktinit.c: